lenght korrektur, danke Björn!
git-svn-id: file:///home/nik/repositories/svn/master@617 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -113,7 +113,7 @@ So sind die beiden Typkonjunktionen A**B und B**A zwar semantischt äquivalent, 
 	\forall ct \in t.containedTypes : ct.instanceOf AT
 \end{equation}
 \begin{equation}\forall t \in NEATConjunction : 
-	t.containedTypes.legth > 0
+	t.containedTypes.length > 0
 \end{equation}
 \begin{equation}\forall t \in AbsTConjunction : 
 	\forall a,b \in t.containedTypes : a.Aspects \cap b.Aspects = \emptyset
@@ -122,9 +122,8 @@ So sind die beiden Typkonjunktionen A**B und B**A zwar semantischt äquivalent, 
 	\forall ct \in t.containedTypes : ct.instanceOf ATConjunction
 \end{equation}
 \begin{equation}\forall t \in NEDisjunctiveNF : 
-	t.containedTypes.legth > 0
+	t.containedTypes.length > 0
 \end{equation}
-
 
 
 \textbf{Manager} \newline
