--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -89,7 +89,7 @@ Folgende konsistenzbedingungen stellen sicher, dass sich Einheiten und Einheiten
 
 \begin{equation} \forall cu \in CompUnit:
 \forall rt \in cu.types.refs:
-ut \in rt.ref \rightarrow rt.exp = \sum_{s \in \bigcup \{ x \in cu.refs | x.ref.type = ut \}} s.exp \end{equation}
+ut \in rt.ref \Rightarrow rt.exp = \sum_{s \in \bigcup \{ x \in cu.refs | x.ref.type = ut \}} s.exp \end{equation}
 
 \begin{equation} \forall cu \in CompUnit :
 \forall u \in cu.refs.ref \exists ut \in cu.type.refs.ref : u.type = ut \end{equation}
