--- a/public/doku/metaModel/trunk/content/pages/Quellenverzeichnis.tex
+++ b/public/doku/metaModel/trunk/content/pages/Quellenverzeichnis.tex
@@ -8,6 +8,6 @@
 \bibliographystyleUnternehmen{alphadin} % Unternehmensquellen formatieren
 
 \bibliographyLiteratur{\content/lib/Literatur} % Einfügen der Literatur
-\bibliographyRecht{\content/lib/Recht} % Einfügen der Rechtsvorschriften
-\bibliographyInternet{\content/lib/Internet} % Einfügen der Internetquellen
-\bibliographyUnternehmen{\content/lib/Unternehmen} % Einfügen der Unternehmensquellen
+%\bibliographyRecht{\content/lib/Recht} % Einfügen der Rechtsvorschriften
+%\bibliographyInternet{\content/lib/Internet} % Einfügen der Internetquellen
+%\bibliographyUnternehmen{\content/lib/Unternehmen} % Einfügen der Unternehmensquellen
