--- a/public/doku/metaModel/trunk/content/Content.tex
+++ b/public/doku/metaModel/trunk/content/Content.tex
@@ -40,8 +40,8 @@
 \listoffigures % Abbildungsverzeichnis einfügen
 
 % Tabellenverzeichnis
-\newpage
-\listoftables % Tabellenverzeichnis einfügen
+%\newpage
+%\listoftables % Tabellenverzeichnis einfügen
 
 % Abkürzungsverzeichnis
 \newpage
@@ -59,10 +59,10 @@
 \include{\content/pages/Quellenverzeichnis} % Inhalt einbinden
 
 % Beginn des Anhangs
-\newpage
-\resetPageTitle % Wichtig: Seitentitel wieder zurücksetzen, da er auf der letzten Seite geändert wurde
-\appendix % Beginn des Anhangs (diese Zeile auskommentieren, falls kein Anhang vorhanden ist)
-\appendixtoc % Schwarze Magie - niemals auskommentieren
-\input{\content/sections/appendix/Anhang} % Inhalt einbinden
+%\newpage
+%\resetPageTitle % Wichtig: Seitentitel wieder zurücksetzen, da er auf der letzten Seite geändert wurde
+%\appendix % Beginn des Anhangs (diese Zeile auskommentieren, falls kein Anhang vorhanden ist)
+%\appendixtoc % Schwarze Magie - niemals auskommentieren
+%\input{\content/sections/appendix/Anhang} % Inhalt einbinden
 
 \end{document}
