--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -28,9 +28,7 @@ direkte Ausprägung eines quantifizierten Objekts, es kennt seine \term{Quantity
 Der \term{Account} kennt seine \term{Quantity} hingegen nur indirekt. Sie ergibt sich aus dem Aggregieren der Einträge
 \term{entries} des \term{Accounts}. Auf welche Art und Weise aggregiert wird, bestimmt dabei eine
 \term{AggregationStrategy}. Diese kann durch Ausführen der Operation \term{aggregate} auf ein \term{QuantifiedObject}
-angewandt werden.
-
-Ein \term{QuantifiedObject} ist zudem in der Modellebene in einem \term{QuantifiedObjectType} typisiert.
+angewandt werden. Ein \term{QuantifiedObject} ist zudem in der Modellebene in einem \term{QuantifiedObjectType} typisiert.
 
 
 \subsubsection{QuantifiedObjectType}\lblSec{Measurement:QuantifiedObjectType}
