--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -14,10 +14,10 @@ Das Interface \emph{AnythingORMATomicType} ist als Zieltyp der \emph{lessThan}-A
 um die Möglichkeit zu schaffen einen atomaren Typen mit Obertyp so zu ändern, dass er anschließend keinen 
 Obertypen mehr besitzt. Folgende Möglichkeiten wurden in der Entwurfsphase betrachtet: 
 \begin{enumerate}
-  		\item superType Assoziation mit Multiplizität $0..1$
-		\item State-Pattern für atomare Typen \(state \in \{rootType, subType\}\)
-        \item automatisch mitgenerierte Obertypen für Aspekte
-        \item Interface über Anything und AtomicType
+  		\item superType Assoziation mit Multiplizität $0..1$.
+		\item State-Pattern für atomare Typen \(state \in \{rootType, subType\}\).
+        \item automatisch mitgenerierte Obertypen für Aspekte.
+        \item Interface über Anything und AtomicType.
 \end{enumerate}
 
 Die erste Variante lässt sich in GOJA aufgrund der restriktiven Set-Methoden nicht realisieren, da diese keine NULL-Werte akzeptieren.
@@ -44,11 +44,11 @@ Aspekte werden vom \emph{AspectManager} verwaltet. Alle Operation werden transak
 \end{description}
 
 \textbf{Abhängige Elemente}
-\begin{enumerate}
-  		\item Atomare Typen, die in diesem Aspekt angelegt sind.
-\end{enumerate}
+\begin{itemize}
+	\item Atomare Typen, die in diesem Aspekt angelegt sind.
+\end{itemize}
 
-
+\newpage
 \subsubsubsection{Atomare Typen}
 
 \textbf{Zusätzliche Konsistenzbedinungen}
@@ -61,8 +61,8 @@ Aspekte werden vom \emph{AspectManager} verwaltet. Alle Operation werden transak
 Atomare Typen werden vom \emph{TypeManager} verwaltet. 
 
 \begin{description}
-\item[createAtomicRootType] legt einen neuen atomaren Typen mit Obertyp \emph{Anything} an. 
-\item[createAtomicSubType] legt einen neuen atomaren Typen unter einem andern an. 
+\item[createAtomicRootType] legt neuen atomaren Typen mit Obertyp \emph{Anything} an. 
+\item[createAtomicSubType] legt neuen atomaren Typen unter einem andern an. 
 \item[renameAtomicType] benennt einen atomaren Typen um. 
 \item[changeAbstract] ist eine modifizierte Set-Methode. Kann einen konkreten Typen nur abstrakt umdeklarieren, wenn er weder Singletons ist, noch 
 Objekte in ihm klassifiziert sind.
@@ -79,11 +79,12 @@ sein \emph{SingletonObject} erstellt. In der \emph{prepareForDeletion}-Operation
 mit gelöscht. Die \emph{changeSingleton}-Operation verwaltet ebenfalls \emph{SingletonObject}s. In den entsprechenden Operationen im 
 \term{TypeManager} werden \term{SingeltonObject}s beim \term{ObjectManager} registriert bzw. entfernt.
  
+\newpage
 \textbf{Abhängige Elemente}
 \begin{enumerate}
   		\item Direkte atomare Untertypen.
   		\item Bei Singletons: Abhängige Objekte des \emph{SingletonObject}s.
-  		\item \ldots siehe Typabstraktion.
+  		\item Siehe Typabstraktion.
 \end{enumerate}
 
 \subsubsection{Komplexe Typen}
@@ -103,7 +104,8 @@ der disjunktiven Normalform mit weiteren Constraints zu versehen (siehe z.B. \em
 Bei Komplexen Typen wird zwischen struktureller und semantischer Äquivalenz unterschieden. Zwei Typen sind strukturell 
 äquivalent, wenn sie identisch aufgebaut sind. Zwei Typen A,B sind semantisch äquivalent, wenn nach den in der Vorlesung 
 aufgestellten Regeln für \term{isLessOrEqual} gilt: 
-\[A.isLessOrEqual(B) \land B.isLessOrEqual(A) \]
+\begin{equation}A.isLessOrEqual(B) \land B.isLessOrEqual(A)
+\end{equation}
 
 Die strukturelle Äquivalenzrelation ist Teilmenge der semantische Äquivalenzrelation.
 So sind die beiden Typkonjunktionen A**B und B**A zwar semantischt äquivalent, aber nicht strukturell.
@@ -131,8 +133,8 @@ Komplexe Typen werden vom \emph{TypeManager} verwaltet. Es wird sichergestellt, 
 die angelegten komplexen Typen paarweise nicht strukturell äquivalent sind. 
 
 \begin{description}
-\item[createTypeConjunction] legt einen normalisierten \qq{UND-Typen} an, falls noch kein strukturell äquivalenter Typ verwaltet wird. Andernfalls wird dieser zurückgegen.
-\item[createTypeDisjunction] legt einen normalisierten \qq{ODER-Typen} an, falls noch kein strukturell äquivalenter Typ verwaltet wird. Andernfalls wird dieser zurückgegen.
+\item[createTypeConjunction] legt normalisierten \qq{UND-Typen} an, falls noch kein strukturell äquivalenter Typ verwaltet wird. Andernfalls wird dieser zurückgegen.
+\item[createTypeDisjunction] legt normalisierten \qq{ODER-Typen} an, falls noch kein strukturell äquivalenter Typ verwaltet wird. Andernfalls wird dieser zurückgegen.
 \item[deleteComplexType] löscht einen komplexen Typen, falls keine Abhängigkeiten bestehen.
 \end{description}
 
@@ -156,9 +158,9 @@ Hierzu wird in GOJA \term{delayedPersistence} verwendet. Es scheinen allerdings 
 durch die Oberfläche Typen persistiert zu werden. Gleiches Verhalten bei der Generierung mit Datenbank wäre höchst problematisch.  
 
 \textbf{Abhängige Elemente}
-\begin{enumerate}
-  		\item siehe Typabstraktion
-\end{enumerate}
+\begin{itemize}
+	\item Siehe Typabstraktion.
+\end{itemize}
 
 \subsubsection{Typabstraktion}
 Die Klasse \term{Type} abstrahiert von atomaren und komplexen Typen. Um die inverse Richtung der spezialisierten Assoziation 
@@ -166,7 +168,7 @@ Die Klasse \term{Type} abstrahiert von atomaren und komplexen Typen. Um die inve
 
 \textbf{Abhängige Elemente}
 \begin{enumerate}
-  		\item Komplexe Typen, die diesen Typen direkt beinhalten
+  		\item Komplexe Typen, die diesen Typen direkt beinhalten.
   		\item ObservationTypes, die Observationen für Objekte dieses Typs typisieren.
   		\item Formalparamter, die in diesem Typ typisiert sind.
   		\item Operationen, die diesen Typ als Quelle oder als Ziel besitzen.
