--- a/public/doku/metaModel/trunk/content/Content.tex
+++ b/public/doku/metaModel/trunk/content/Content.tex
@@ -62,7 +62,7 @@
 %\newpage
 %\resetPageTitle % Wichtig: Seitentitel wieder zurücksetzen, da er auf der letzten Seite geändert wurde
 %\appendix % Beginn des Anhangs (diese Zeile auskommentieren, falls kein Anhang vorhanden ist)
-\appendixtoc % Schwarze Magie - niemals auskommentieren
+%\appendixtoc % Schwarze Magie - niemals auskommentieren
 %\input{\content/sections/appendix/Anhang} % Inhalt einbinden
 
 \end{document}
