TODOs eingefügt. Measurement: Modellausschnitt mit viewport eingebunden
git-svn-id: file:///home/nik/repositories/svn/master@694 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/Content.tex
+++ b/public/doku/metaModel/trunk/content/Content.tex
@@ -59,10 +59,10 @@
 \include{\content/pages/Quellenverzeichnis} % Inhalt einbinden
 
 % Beginn des Anhangs
-%\newpage
-%\resetPageTitle % Wichtig: Seitentitel wieder zurücksetzen, da er auf der letzten Seite geändert wurde
-%\appendix % Beginn des Anhangs (diese Zeile auskommentieren, falls kein Anhang vorhanden ist)
-%\appendixtoc % Schwarze Magie - niemals auskommentieren
-%\input{\content/sections/appendix/Anhang} % Inhalt einbinden
+\newpage
+\resetPageTitle % Wichtig: Seitentitel wieder zurücksetzen, da er auf der letzten Seite geändert wurde
+\appendix % Beginn des Anhangs (diese Zeile auskommentieren, falls kein Anhang vorhanden ist)
+\appendixtoc % Schwarze Magie - niemals auskommentieren
+\input{\content/sections/appendix/Anhang} % Inhalt einbinden
 
 \end{document}
