--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -5,11 +5,13 @@ eine qualitative Messung. Im Kontext dieses Projekts wird diese Art von Messung 
 \ref{Observations}) bezeichnet. Unter quantitativen Messungen, bezeichnet als \term{Measurement}, wird
 beispielsweise das Feststellen der Körpergröße eines Menschen verstanden.
 
+\img[width=\relWidth{0.8},viewport=3588 390 4280 1170, clip]{klassendiagramm/Klassendiagramm.pdf}{Klassendiagramm - Ausschnitt Measurement}{img_measurement}
+
 \term{Measurements} (beispielsweise die \qq{Körpergröße von Hugo Egon Balder: 190cm}) werden in Form von Quantitäten bzw.
 \term{Quantities} auf Konten (\term{Accounts}) erfasst. Des Weiteren gibt es \term{MeasurementTypes} und
 \term{AccountTypes}, welche in diesem Abschnitt noch genauer erläutert werden.
 
-Technisch gesehen befinden sich auf der Modellebene im Bereich \term{Measurement} zunächst drei Klassen:
+Technisch gesehen befinden sich auf der Modellebene im Bereich \term{Measurement} zunächst drei Klassen (siehe \refImg{img_measurement}):
 \term{MeasurementType}, \term{AccountType} und deren gemeinsame Oberklasse \term{QuantifiedObjectType}. Auf der
 Exemplarebene finden sich deren Pendants als \term{Measurement}, \term{Account} und \term{QuantifiedObject}.
 
