--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -2,6 +2,8 @@
 Das Typsystem ist die zentrale Komponente des Metamodells. Im folgenden Abschnitt sind die 
 Änderungen bezüglich des in der Vorlesung erarbeiteten Modells kurz zusammengefasst.
 
+\TODO[Ausschnitt mit viewport einfügen, siehe Forum]
+
 \subsubsection{Aspekte und atomare Typen}
 
 Aspekte stellen gemäß der ursprünglichen Modellierung eine Dimension dar, in deren Elementen sich Objekte dynamisch klassifizieren lassen. 
