--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
@@ -2,7 +2,7 @@
 Im Folgenden werden die Anpassungen der Klasse \term{Object} und deren Methoden im Vergleich zum Modell aus der Vorlesung betrachtet.
 
 \img[width=\relWidth{0.5}]{type/Object.png}{Ausschnitt Objektwelt}{img_obj}
-
+\TODO[Ausschnitt mit viewport einfügen, siehe Forum]
 
 \subsubsection{Änderungen und neue Methoden}
 Die Klasse \term{Object} wurde wie viele Klassen im Modell um den Präfix \qq{M} erweitert um Verwechselungen mit der Klasse \term{java.lang.Object} zu vermeiden.
