added vector grafics
git-svn-id: file:///home/nik/repositories/svn/master@695 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
@@ -4,8 +4,7 @@ Typ zeigte, der nur aus Singletons bestand. Damit dies aber möglich ist, müsse
 abstrakt und alle Blätter Singletons sein. Diese Bedingung muss aber für allgemeine Singletons nicht gelten. Um an dieser 
 Stelle eine klare Trennung zu erreichen und die Transparenz des Modells zu erhöhen, wurden Observations als eigener Modell-Abschnitt ausgelagert.
 
-\TODO[Ausschnitt mit viewport einfügen, siehe Forum]
-\img[width=\relWidth{1}]{observation/observation.png}{Ausschnitt Observations}{img_observations}
+\img[width=\relWidth{1}]{observation/observation.pdf}{Ausschnitt Observations}{img_observations}
 
 Observations werden auf Modellebene durch die Klassen \emph{Enum} und \emph{ObservationType} repräsentiert. 
 Wie man daran bereits erkennen kann, werden Observations mithilfe von Enumerationen interpretiert. 
